# CSD_2526

./: CMakeLists.txt  README.md
BLOK_1/: helloworld.py  stappenplan.md
BLOK_1/FINAL_PRODUCT/: UIFunctions.py  main.py  pendulumFunctions.py
BLOK_1/MOCKUP_CODE/: beschrijving.md
BLOK_1/oprdachten/week2/: hello_bliep.py
BLOK_1/pseudocode/: MoSCoW  Mockup pendulum.py  stappenplan.md
BLOK_1/python_basics/: Mockup pendulum.py  for_loop.py  grid_for_loop.py  listtostring.py
BLOK_1/rythm_generator/: Mockup pendulum.py  beschrijving.md
BLOK_1/rythm_generator/experiments/: UIexperiments.py  dictionary.py  findclosestnum.py  functionappend.py  πto˚.py
BLOK_1/rythm_generator/experiments/letsmakeafunction/: UI_functions.py  main.py
BLOK_1/rythm_generator/final_product/: pendulumFunctions.py  quantizeFunctions.py  reflectie.md
BLOK_1/rythm_generator/mockup/: Mockup pendulum.py  pseudocode.py  stappenplan.md
BLOK_1/rythm_generator/pendulum sound/: pendulum.py  pendulumdictionary.py  pendulumfunctions.py  pendulumplayback.py
BLOK_1/rythm_generator/pendulum sound/modular_pendulum/: UIFunctions.py  completePendulum.py  main.py  (+1 more)
BLOK_1/rythm_generator/pygame visual/: screen.py
BLOK_1/rythm_generator/pygame_visual/: screen.py
BLOK_2/C++_basics/: CMakeLists.txt
BLOK_2/C++_basics/helloWorld/: CMakeLists.txt
BLOK_2/C++_basics/instruments/: CMakeLists.txt  guitar.cpp  guitar.h  main.cpp  stringInst.cpp  stringInst.h
BLOK_2/C++_basics/isa/: CMakeLists.txt  jbl.cpp  jbl.h  main.cpp  speaker.cpp  speaker.h
BLOK_2/C++_basics/min/: class.cpp  min.cpp
BLOK_2/C++_basics/noteclass/: main.cpp
BLOK_2/C++_basics/sequence/: CMakeLists.txt  additiveSynth.cpp  additiveSynth.h  callback.cpp  callback.h  main.cpp  melody.cpp  melody.h  note.cpp  note.h  oscillator.cpp  oscillator.h  sine.cpp  sine.h  synth.cpp  synth.h
BLOK_2/C++_basics/simpleClass/: CMakeLists.txt  main.cpp
BLOK_2/C++_basics/sounding_sine/: CMakeLists.txt  customCallback.h  melody.cpp  melody.h  oscillator.cpp  oscillator.h  sine.cpp  sine.h
BLOK_2/OOP/: oopSynth.cpp
BLOK_2/leerdoelen&design/: pseudoKickSynth.py
BLOK_2/oop_Synth/: CMakeLists.txt  audiocomponent.h  callback.cpp  callback.h  main.cpp  melody.h  note.cpp  note.h  oscillator.cpp  oscillator.h  sine.cpp  sine.h
BLOK_3/: CMakeLists.txt
BLOK_3/TEST/Plugin_Focus/: CMakeLists.txt  EffectsChain.h  PluginProcessor.cpp
BLOK_3/blok3Deliverables/: CMakeLists.txt
BLOK_3/blok3Deliverables/codeBase/: CMakeLists.txt
BLOK_3/blok3Deliverables/designDeliverable/: design&Leerdoelen.txt  revDelayPseudoishCode.txt
BLOK_3/blok3Deliverables/reflectionDeliverable/: delayPresentation.key  reflection.txt
BLOK_3/codeClinics/: CMakeLists.txt
BLOK_3/codeClinics/cc42/: CMakeLists.txt  CircularBuffer.h  Filters.h  line.cpp  main.cpp
(+24 files in other folders)
